@@ -82,7 +82,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <forkMode>never</forkMode>
+          <argLine>-XX:MaxPermSize=256M</argLine>
         </configuration>
       </plugin>
     </plugins>
